service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
  labels:
    app.kubernetes.io/name: app1
spec:
  selector:
    app.kubernetes.io/name: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
